# fpw

./: .gitignore  Cargo.toml  README-CN.md  README.md  User-Manual-CN.md  User-Manual.md  changelog.md  dev_log.md
crates/fpw-cli/: Cargo.toml
crates/fpw-cli/src/: main.rs  web.rs  workflow_store.rs
crates/fpw-core/: Cargo.toml
crates/fpw-core/src/: execute.rs  ffc.rs  lib.rs  model.rs  recent.rs  report.rs  validate.rs
docs/: architecture.md  fwp-schema-v1.md
examples/: delete-range.fwp  fill-crc-sha.fwp  firmwareflow-basic.ffc  merge-insert.fwp
scripts/: package-release.ps1
web/: index.html  package-lock.json  package.json
web/src/: api.ts  i18n.tsx  main.tsx  styles.css  workflow.ts
web/src/components/: LibraryView.tsx  ResultPanel.tsx  RunView.tsx  WizardView.tsx
workflows/: merge_boot_and_app.fwp  test001.fwp
