[package]
name = "fpw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "fpw"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
fpw-core = { path = "../fpw-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

